fix: add z-index to MacWindowEffect

--- a/src/components/MacWindowEffect/MacWindowEffect.scss
+++ b/src/components/MacWindowEffect/MacWindowEffect.scss
@@ -16,6 +16,7 @@
   width: 100%;
   background-color: black;
 
+  z-index: 2;
   .circle {
     @extend %circle-shared;
     background-color: #ed6a5e;
